fix: only no y overflow on dashboard page

--- a/front/src/scss/app.scss
+++ b/front/src/scss/app.scss
@@ -1,6 +1,5 @@
 #root {
   height: 100vh;
-  overflow-y: hidden;
   .dash-separator {
     padding: 0 0.5rem;
   }
